fix: z-index scaling

--- a/styles/components/_map.scss
+++ b/styles/components/_map.scss
@@ -25,7 +25,7 @@
 
 #transform-toolbar {
   position: absolute;
-  z-index: 999;
+  z-index: 998;
   top: 72px;
   left: 24px;
   display: flex;
